exports[`Toolbar should render actions toolbar 1`] = `
<div>
  <nav
    className="tc-actionbar-container nav">
    <div
      className="navbar-left">
      <button
        className="btn btn-primary"
        disabled={false}
        id="my-toolbar-actions-add"
        onClick={[Function]}
        role={null}
        type="button">
        <svg
          aria-hidden="true"
          className="tc-svg-icon"
          title={null}>
          <use
            xlinkHref="#talend-plus" />
        </svg>
        <span>
          Add
        </span>
      </button>
    </div>
  </nav>
  <div
    className="navbar navbar-default"
    role="toolbar">
    <div
      className="container-fluid" />
  </div>
</div>
`;

exports[`Toolbar should render actions toolbar with selected items 1`] = `
<div>
  <nav
    className="tc-actionbar-container nav">
    <div
      className="navbar-left">
      <span
        className="tc-actionbar-selected-count">
        1
         selected
      </span>
      <button
        className="btn btn-default"
        disabled={false}
        id="my-toolbar-actions-delete"
        onClick={[Function]}
        role={null}
        type="button">
        <svg
          aria-hidden="true"
          className="tc-svg-icon"
          title={null}>
          <use
            xlinkHref="#talend-trash" />
        </svg>
        <span>
          Delete selection
        </span>
      </button>
    </div>
  </nav>
  <div
    className="navbar navbar-default"
    role="toolbar">
    <div
      className="container-fluid" />
  </div>
</div>
`;

exports[`Toolbar should render display mode selector 1`] = `
<div>
  <div
    className="navbar navbar-default"
    role="toolbar">
    <div
      className="container-fluid">
      <p
        className="navbar-text">
        <label
          htmlFor="my-toolbar-display-mode">
          Display:
        </label>
      </p>
      <ul
        className="nav navbar-nav"
        role={null}>
        <li
          className="dropdown"
          style={undefined}>
          <a
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle"
            href=""
            id="my-toolbar-display-mode"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button">
            <i
              aria-hidden="true"
              className="fa fa-bars"
              title={null} />
             
            <span
              className="caret" />
          </a>
          <ul
            aria-labelledby="my-toolbar-display-mode"
            className="dropdown-menu"
            role="menu">
            <li
              className=""
              role="presentation"
              style={undefined}>
              <a
                href=""
                id="my-toolbar-display-mode-table"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1">
                <i
                  aria-hidden="true"
                  className="fa fa-bars"
                  title={null} />
                Table
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}>
              <a
                href=""
                id="my-toolbar-display-mode-large"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1">
                <i
                  aria-hidden="true"
                  className="fa fa-list-alt"
                  title={null} />
                Expanded
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}>
              <a
                href=""
                id="my-toolbar-display-mode-tile"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1">
                <i
                  aria-hidden="true"
                  className="fa fa-th-large"
                  title={null} />
                Tile
              </a>
            </li>
          </ul>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Toolbar should render empty toolbar 1`] = `
<div>
  <div
    className="navbar navbar-default"
    role="toolbar">
    <div
      className="container-fluid" />
  </div>
</div>
`;

exports[`Toolbar should render filter form 1`] = `
<div>
  <div
    className="navbar navbar-default"
    role="toolbar">
    <div
      className="container-fluid">
      <form
        className="navbar-form navbar-right"
        onSubmit={[Function]}
        role="search">
        <div
          className="form-group">
          <input
            aria-label="Filter"
            className="form-control"
            id="my-toolbar-filter-input"
            onChange={[Function]}
            placeholder="Filter"
            type="search" />
          <button
            className="btn btn-link"
            disabled={false}
            id="my-toolbar-filter-submit"
            title="Filter"
            type="submit">
            <svg
              aria-hidden="true"
              className="tc-svg-icon"
              title={null}>
              <use
                xlinkHref="#talend-search" />
            </svg>
            <span
              className="sr-only">
              Filter
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Toolbar should render pagination 1`] = `
<div>
  <div
    className="navbar navbar-default"
    role="toolbar">
    <div
      className="container-fluid">
      <p
        className="navbar-text">
        <label
          htmlFor="my-toolbar-pagination-size">
          Show:
        </label>
      </p>
      <ul
        className="nav navbar-nav"
        role={null}>
        <li
          className="dropdown"
          style={undefined}>
          <a
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle"
            href=""
            id="my-toolbar-pagination-size"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button">
            5
             
            <span
              className="caret" />
          </a>
          <ul
            aria-labelledby="my-toolbar-pagination-size"
            className="dropdown-menu"
            role="menu">
            <li
              className=""
              role="presentation"
              style={undefined}>
              <a
                href=""
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1">
                5
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}>
              <a
                href=""
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1">
                10
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}>
              <a
                href=""
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1">
                20
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}>
              <a
                href=""
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1">
                50
              </a>
            </li>
          </ul>
        </li>
        <li
          className="btn-link"
          role="presentation"
          style={undefined}>
          <a
            href=""
            id="my-toolbar-pagination-nav-to-first"
            onClick={[Function]}
            role="button">
            <i
              aria-hidden="true"
              className="fa fa-backward"
              title={null} />
          </a>
        </li>
        <li
          className="btn-link tc-pagination-ctrl-prev"
          role="presentation"
          style={undefined}>
          <a
            href=""
            id="my-toolbar-pagination-nav-to-prev"
            onClick={[Function]}
            role="button">
            <i
              aria-hidden="true"
              className="fa fa-play"
              title={null} />
          </a>
        </li>
        <li
          className="disabled"
          role="presentation"
          style={undefined}>
          <a
            href=""
            onClick={[Function]}
            role="button"
            style={
              Object {
                "pointerEvents": "none",
              }
            }
            tabIndex={-1}>
            <span
              className="btn-link">
              6
              /
              2
            </span>
          </a>
        </li>
        <li
          className="btn-link"
          role="presentation"
          style={undefined}>
          <a
            href=""
            id="my-toolbar-pagination-nav-to-next"
            onClick={[Function]}
            role="button">
            <i
              aria-hidden="true"
              className="fa fa-play"
              title={null} />
          </a>
        </li>
        <li
          className="btn-link"
          role="presentation"
          style={undefined}>
          <a
            href=""
            id="my-toolbar-pagination-nav-to-last"
            onClick={[Function]}
            role="button">
            <i
              aria-hidden="true"
              className="fa fa-forward"
              title={null} />
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Toolbar should render sort selector 1`] = `
<div>
  <div
    className="navbar navbar-default"
    role="toolbar">
    <div
      className="container-fluid">
      <p
        className="navbar-text">
        <label
          htmlFor="my-toolbar-sort-by">
          Sort by:
        </label>
      </p>
      <ul
        className="nav navbar-nav"
        role={null}>
        <li
          className="dropdown"
          style={undefined}>
          <a
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle"
            href=""
            id="my-toolbar-sort-by"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button">
            Id
             
            <span
              className="caret" />
          </a>
          <ul
            aria-labelledby="my-toolbar-sort-by"
            className="dropdown-menu"
            role="menu">
            <li
              className=""
              role="presentation"
              style={undefined}>
              <a
                href=""
                id="my-toolbar-sort-by-item-id"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1">
                Id
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}>
              <a
                href=""
                id="my-toolbar-sort-by-item-name"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1">
                Name
              </a>
            </li>
          </ul>
        </li>
        <li
          className=""
          role="presentation"
          style={undefined}>
          <a
            href=""
            id="my-toolbar-sort-order"
            onClick={[Function]}
            role="button">
            DESCENDING
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
